# causal-cut-replication

./: .gitignore  README.md  case_1_submissions.sh  case_2_submissions.sh  causal_estimation.py  causal_tests.json  config.py  dag_comparison.py  dag_generator.py  data_analysis.py  data_processing.py  data_slicer.py  demo_test.sh  environment.yaml  find_attack_causes.py  flow.dot  flow_raw.dot  g_estimation.py  g_estimation.sh  generate_variables.py  long_format_data.py  monte_carlo_search.py  output.json  prevent_patient_ids.py  process_results.py  proof_of_concept.py  pyproject.toml  requirements.txt  safe_ranges.py  setup_and_run_case.sh  successful_attacks.json  test_water_g.py  variables.json  water_g.py  water_g_new.py  water_g_old.py  water_g_preproc.py
case-1-swat/: .gitignore  README.md  actuators.py  analysis.py  dcg.dot  flow_unfolder.py  hpc-run.sh  hpc-submissions.sh  infer_usage_profile.py  local_run.sh  long_format_data.py  mutate_attacks.py  preliminary_comparison.py  process_results.py  results_processing.py  safe_ranges.json  successful_attacks.json  successful_attacks_flat.json  successful_attacks_mutated.json  water_g.py
case-2-oref0/: .gitignore  README.md  attack_finder.py  get_initial_values.py  oref0.dot  oref0_g.py  safe_ranges.json  safe_ranges.py  successful_attacks.json
dags/: dag_0.dot  dag_3.dot  dag_3_reduced.dot  dag_4.dot
plotting/: constants.py  data_analysis.py  data_analysis_old.py  ddmin.py  grouped_boxplot.py  theoretical_analysis.py  theoretical_analysis_old.py
study-1-swat/: dag_3.dot  long_format_data.py  water_g.py  (+1 more)
(+26 files in other folders)
