[project]
name = "causal_minimisation"
description = "Test case minimisation with causal inference"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]

dependencies = [
    "pyarrow>=16.1.0",
    "jsonpickle>=3.2.2",
    "causal_testing_framework==8.1.0",
    "pyswarms==1.3.0",
    "python-dotenv==1.0.0",
    "markovify==0.9.4",
    "jinja2==3.1.4",
    "openpyxl==3.1.0",
    "cliffs_delta==1.0.0",
]
